# xmp-toolkit-rs

./: .commitlintrc.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  NOTICE.txt  README.md  UPGRADING.md  build.rs  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  clippy.yml  code-fmt.yml  pr_title.yml  publish.yml  release.yml  tests.yml
examples/: read_xmp.rs
src/: ffi.cpp  ffi.rs  lib.rs  xmp_const.rs  xmp_date_time.rs  xmp_error.rs  xmp_file.rs  xmp_gps.rs  xmp_iterator.rs  xmp_meta.rs  xmp_ns.rs  xmp_toolkit.rs  xmp_value.rs
src/tests/: mod.rs  xmp_core_coverage.rs  xmp_date_time.rs  xmp_date_time_chrono.rs  xmp_error.rs  xmp_error_type.rs  xmp_file.rs  xmp_gps.rs  xmp_iterator.rs  xmp_meta.rs  xmp_value.rs
src/tests/fixtures/: issue_234.xmp  mod.rs  no_xmp.txt
src/tests/issues/: issue_230.rs  issue_234.rs  mod.rs
