[package]
name = "xmp_toolkit"
version = "1.7.3"
description = "Rust-language bindings for Adobe's XMP Toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adobe/xmp-toolkit-rs"
documentation = "https://docs.rs/xmp_toolkit"
readme = "README.md"
authors = ["Eric Scouten <scouten@adobe.com>"]
keywords = ["xmp", "metadata"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.70.0"
links = "xmp_toolkit"
exclude = [
    "external/xmp_toolkit/docs",
    "external/xmp_toolkit/samples",
    "external/xmp_toolkit/third-party/zlib/ReadMe.txt",
    "external/xmp_toolkit/third-party/zlib/README.md",
    "external/xmp_toolkit/third-party/zlib/*.c",
    "external/xmp_toolkit/third-party/zlib/*.h",
    "external/xmp_toolkit/third-party/expat/lib",    
    "external/xmp_toolkit/XMPFilesPlugins/PDF_Handler",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
chrono = ["dep:chrono"]
crt_static = []

[dependencies]
chrono = { version = "0.4.24", optional = true }
num_enum = "0.7.0"
thiserror = "1.0"

[build-dependencies]
cc = "> 1.0.60, <=1.0.92"
    # IMPORTANT: We can not upgrade to 1.0.86 or later until
    # https://github.com/adobe/xmp-toolkit-rs/issues/197 is resolved.
    # If someone has time to address that issue before we get to it,
    # a PR would be very welcome.

fs_extra = "1.3"

[dev-dependencies]
anyhow = "1.0.67"
tempfile = "3.2"
